Add option to upload file in Project Submission

--- a/src/components/ProjectSubmissionForm.astro
+++ b/src/components/ProjectSubmissionForm.astro
@@ -14,7 +14,14 @@
           </div>
       <div>
         <label for="project-title" class="full-width-underline">2. Slide Upload:</label>
-        <input type="text" id="slide" name="slide" required />
+        <p>Upload your presentation slides *</p>
+        <div class="rectangle-small">Maximum size limit: 10MB</div>
+        <label for="file-upload" class="rectangle-big"> 
+            <i class="fa-solid fa-upload"></i>
+            <p>Click to Upload Slide</br>Accepted File Type: PDF & PPT</p>
+            <p id="file-name" class="file-name"></p>
+        <input id="file-upload" type="file" style="display: none;" /></label>
+        
       </div>
       <div>
         <label for="description" class="full-width-underline">3. Link Upload:</label>
@@ -30,6 +37,19 @@
   </div>
 </div>
 
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const fileUpload = document.getElementById("file-upload");
+      const fileNameDisplay = document.getElementById("file-name");
+  
+      fileUpload.addEventListener("change", (event) => {
+        const fileName = event.target.files[0].name;
+        fileNameDisplay.textContent = `File selected: ${fileName}`;
+      });
+    });
+  </script>
+  
+
 <style>
   .container {
     display: flex;
@@ -38,7 +58,6 @@
     border-radius: 8px;
     height: auto; /* Adjust height to account for margin */
     background-color: #f0f0f0;
-    margin: 100px;
     width: 1000px; /* Set a wider minimum width */
   }
 
@@ -53,32 +72,51 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     overflow-y: auto;
+    margin: 0;
   }
 
   .body p {
     font-size: 0.75rem;
     margin-bottom: 0.25rem;
-    margin-top: 1rem;
+    align-items: center;
+    flex-direction: column;
   }
 
   .body div {
     margin-bottom: 1rem;
   }
 
-  .body rectangle {
-  height: 75px;
-  width: 75px;
-  color:white;
-  background-color: rgb(77,77,77);
-  border-radius:7px;
+  .rectangle-small {
+    height: 2.0rem;
+  width: 25%;
+  color:#ffffff;
+  font-size : 1rem;
+  background-color: rgb(117,112,164);
+  border-radius:6px;
   display: flex;
   justify-content:center;
   align-items: center;
+  margin-bottom: -1rem;
+}
+
+.rectangle-big {
+  height: flex;
+  width: 100%;
+  color:white;
+  background-color: rgb(67,63,108);
+  padding-top: 0.5rem;
+  border-radius:7px;
+  display: block;
+  justify-content:center;
+  text-align: center;
+  align-items: center;
+  cursor: pointer;
+  margin-top: -1.25rem;
+  transition: background-color 0.3s ease;
 }
 
   .body label {
     font-weight: bold;
-    margin-top: 2rem;
   }
   
   .body input {
