--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -1,6 +1,6 @@
 ---
+import AdminParent from "../components/AdminParent";
 import Layout from "../layouts/Layout.astro";
-import JudgeDashboardParent from "../components/JudgeDashboardParent";
 ---
 
 <script>
@@ -9,10 +9,8 @@ import JudgeDashboardParent from "../components/JudgeDashboardParent";
 
 <Layout title="VeeHac">
   <div class="body">
-    <div class="judge-div">
-    <JudgeDashboardParent client:load />
+    <AdminParent client:load />
   </div>
-</div>
 </Layout>
 
 
@@ -25,19 +23,14 @@ import JudgeDashboardParent from "../components/JudgeDashboardParent";
     flex-direction: column;
     align-items: center;
     min-width: 100%;
-    height: auto;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
     background-color: #433f6c;
     /* display: flex;
     justify-content: center; */
 
  
-  }
-  .judge-div{
-    min-height: 100vh;
-    display: inline-flex;;
-    align-items: center;
-    justify-content: center; 
-    background-color: #433f6c;
   }
 
 </style>
