--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -4,10 +4,10 @@ const { backgroundColor } = Astro.props;
 
 <body>
   <div class="navbar" style={`background-color: ${backgroundColor};`}>
-    <div style="font-weight: 900; font-size: 48px;">V</div>
+    <a href="/" style="font-weight: 900; font-size: 48px;">V</a>
     <div class="navbar-contents">
       <div class="navbar-item">
-        <a href="">Timeline</a>
+        <a href="/timeline">Timeline</a>
       </div>
       <div class="navbar-item">
         <a href="">FAQ</a>
