--- a/src/pages/winner.astro
+++ b/src/pages/winner.astro
@@ -61,6 +61,11 @@ const winners = [
     ))}
   </div>
 
+  <!-- Consolation Prizes Section -->
+  <section class="consolation-prizes">
+    <h2>Consolation Prizes</h2>
+  </section>
+
   <!-- Carousel Section -->
   <div class="carousel-wrapper"><Carousel /></div>
 
@@ -359,6 +364,25 @@ a {
 .runner-up-description p {
   color: #555;
   line-height: 1.6;
+}
+
+.consolation-prizes {
+  text-align: center;
+  margin: 5rem 6rem -3rem 6rem;
+  border-radius: 10px;
+  user-select: none;
+  opacity: 0;
+  animation: fadeInTop 1s ease-in forwards;
+  animation-delay: 0.75s;
+}
+
+.consolation-prizes h2 {
+  font-size: 2.5rem;
+  font-weight: bolder;
+  color: white;
+  padding: 10px 0;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 /* Animations */
