--- a/src/pages/winner.astro
+++ b/src/pages/winner.astro
@@ -13,7 +13,6 @@ const winners = [
 
 <Layout title="VeeHac">
     <NavBar backgroundColor="#433f6c" />
-  <NavBar backgroundColor="#827BD2" />
 
   <!-- Header Section -->
   <header class="header">
@@ -77,7 +76,7 @@ const winners = [
 
 body {
   font-family: "Chesna Grotesk", sans-serif;
-  background-color: #2d2a55;
+  background-color: #433f6c;
   color: white;
 }
 
